--- a/src/client/app/pages/game/game.scss
+++ b/src/client/app/pages/game/game.scss
@@ -1,28 +1,15 @@
 @import '../../variables/colors.scss';
 
-.map {
-  border: 5px solid $shadow;
-  border-radius: 2px;
-  height: 80%;
-  max-width: 100%;
-}
-
 .buttonsContainer {
   text-justify: center;
 }
 
-.paperImg {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  max-width: 100%;
-  max-height: 100%;
-}
-
 .overlay {
-  height: 100%;
-  max-width: 100%;
-  vertical-align: top;
+  border: 10px solid $shadow;
+  border-radius: 4px;
+  height: 80vmin;
+  background-image: url(/assets/paperTexture.jpg);
+  background-size: contain;
 }
 
 .l, .Unowned	{fill:#FFFFDD; stroke:black; stroke-linejoin:round; opacity: 0.25; stroke-width:0.8;}
@@ -32,14 +19,6 @@
 #A, #F, #sc {pointer-events: none; stroke: black;}
 #unit { pointer-events:none }
 text		{font-family:Palatino; fill:#222; font-size:9px; transform:translate(-5px, 0px)}
-
-/* .Austria	{fill:#FF77FF; stroke:black}
-.England	{fill:#0000FF; stroke:black}
-.France 	{fill:#00FFFF; stroke:black}
-.Germany	{fill:#808080; stroke:black}
-.Italy  	{fill:#00FF00; stroke:black}
-.Russia 	{fill:#FFFF00; stroke:black}
-.Turkey 	{fill:#FF0000; stroke:black} */
 
 .empire1  {fill: #FFFF88;}
 .empire2  {fill: #FFFF00;}
@@ -70,10 +49,6 @@ text		{font-family:Palatino; fill:#222; font-size:9px; transform:translate(-5px,
 .success { stroke: #1C1 }
 .bounce { stroke: #D50 }
 .move { stroke: #000 }
-
-/* .light {fill:#06B559;}
-.medium{fill:#0B9B53;}
-.shadow{fill:#088443;} */
 
 svg text {
 	-webkit-user-select: none;
