--- a/src/client/app/pages/game/game.scss
+++ b/src/client/app/pages/game/game.scss
@@ -14,6 +14,7 @@
 
 .l, .Unowned	{fill:#FFFFDD; stroke:black; stroke-linejoin:round; opacity: 0.25; stroke-width:0.8;}
 .w		{fill:#99CCFF; stroke:#222; stroke-linejoin:round; opacity: 0.45; stroke-width:0.8;}
+.w:hover {fill: yellow; stroke: yellow; stroke-width: 2;}
 .s		{fill:url(#diagonalHatch); stroke:#220; stroke-linejoin:round; opacity: 0.5; }
 .sc {fill:#DDDDDD; stroke:black;}
 #A, #F, #sc {pointer-events: none; stroke: black;}
