change each territory into its own svg

--- a/src/client/app/components/board/board.scss
+++ b/src/client/app/components/board/board.scss
@@ -2,10 +2,11 @@
 
 
 .gameBoard {
+  position: absolute;
   border: 2px solid $shadow;
   border-radius: 4px;
   height: 80vmin;
-  background-image: url(/assets/paperTexture.jpg);
+  // background-image: url(/assets/paperTexture.jpg);
   background-size: contain;
 }
 
