--- a/src/client/app/components/board/territory/territory.scss
+++ b/src/client/app/components/board/territory/territory.scss
@@ -56,6 +56,20 @@ text {
   transform: translate(-5px, 0px);
   pointer-events: none;
 }
+// Move to separate component
+.orderBox {
+  width: 15%;
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-align: center;
+  background: rgba(255,255,255, .4);
+  padding: 5px;
+}
+
+.orderTitle {
+  font-weight: bold
+}
 
 .empire1  {fill: #FFFF88;}
 .empire2  {fill: #FFFF00;}
