--- a/src/client/app/app.scss
+++ b/src/client/app/app.scss
@@ -2,6 +2,7 @@
 
 body {
   background-color: $offwhite;
+  margin: 8px 0;
 }
 
 .page {
@@ -9,7 +10,6 @@ body {
   align-items: center;
   align-content: flex-start;
   flex-direction: column;
-  padding: 56px;
   font-family: 'Notable', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
