--- a/src/client/app/components/board/territory/territory.scss
+++ b/src/client/app/components/board/territory/territory.scss
@@ -1,7 +1,6 @@
 @import '@client/app/variables/colors.scss';
 
 .territorySquare {
-  position: absolute;
   width: 100%;
   pointer-events: none
 }
@@ -53,18 +52,8 @@ text {
   font-family: Palatino;
   fill: #222;
   font-size: 9px;
-  transform: translate(-5px, 0px);
+  transform: translate(0, 8px);
   pointer-events: none;
-}
-// Move to separate component
-.orderBox {
-  width: 15%;
-  position: absolute;
-  border: 1px solid black;
-  border-radius: 5px;
-  text-align: center;
-  background: rgba(255,255,255, .4);
-  padding: 5px;
 }
 
 .orderTitle {
