--- a/src/client/app/components/board/territory/territory.scss
+++ b/src/client/app/components/board/territory/territory.scss
@@ -12,6 +12,7 @@
   stroke-linejoin: round;
   fill-opacity: 0.2;
   stroke-width: 0.5;
+  transition: fill-opacity 0.2s;
 }
 
 .w {
@@ -21,6 +22,7 @@
   stroke-linejoin: round;
   fill-opacity: 0.45;
   stroke-width: 0.5;
+  transition: fill 0.2s;
 }
 
 .w:hover {
