--- a/src/client/app/pages/login/login.scss
+++ b/src/client/app/pages/login/login.scss
@@ -3,6 +3,10 @@
 h1 {
   color: $shadow;
   font-size: 84px;
+  @media (max-width: 500px) {
+    font-size: 50px;
+    text-shadow: 3px 3px 0px $mid;
+  }
   text-shadow: 5px 5px 0px $mid;
   text-align: center;
 }
