--- a/src/client/app/components/board/board.scss
+++ b/src/client/app/components/board/board.scss
@@ -8,6 +8,9 @@
   background-size: contain;
   width: 100%;
   max-width: 80vh;
+  @media screen and (max-width:767px) and (orientation:landscape) {
+    max-width: 100%;
+  }
 }
 
 .unit {
