--- a/src/client/app/variables/colors.scss
+++ b/src/client/app/variables/colors.scss
@@ -1,5 +1,5 @@
-$background: #D7BEA8;
-$highlight: #4972AB;
-$mid: #546A7B;
+$background: #d7bea8;
+$highlight: #4972ab;
+$mid: #546a7b;
 $shadow: #102542;
-$offwhite: #EFEFEF;
+$offwhite: #efefef;
